--- a/pageW/store/lieux.html
+++ b/pageW/store/lieux.html
@@ -82,6 +82,7 @@ width:50%;
          <li class="nav-item"><a href="panier.html" class="nav-link">Panier</a></li>
        
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+             <li class="nav-item"><a href="colorlib-regform-1\index.html" class="nav-link">Login</a></li>
           
           </ul> 
         </div>
